Commit #6 - Connect PGadmin and Postgres inside Docker with a network

--- a/week_1/1_docker_sql/upload-data.ipynb
+++ b/week_1/1_docker_sql/upload-data.ipynb
@@ -575,13 +575,13 @@
    ],
    "source": [
     "# Inserting data into Postgresql:\n",
-    "df.head(n=0).to_sql(name=\"yellow_taxi_data\", con=engine, if_exists=\"replace\")"
+    "# df.head(n=0).to_sql(name=\"yellow_taxi_data\", con=engine, if_exists=\"replace\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "5382cf2a",
+   "id": "f044c5ee",
    "metadata": {},
    "outputs": [
     {
@@ -610,7 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "bf791ae6",
+   "id": "e0dcbe88",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,7 +620,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "444723bb",
+   "id": "8405bcb9",
    "metadata": {},
    "outputs": [
     {
@@ -686,7 +686,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46ebf7eb",
+   "id": "7dc193a3",
    "metadata": {},
    "outputs": [],
    "source": []
